--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -25,7 +25,7 @@ main {
 }
 
 section {
-  @apply px-4 mt-4 w-full max-w-6xl mx-auto
+  @apply flex flex-col px-4 mt-4 w-full max-w-6xl mx-auto
 }
 
 footer {
