--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -1,31 +1,57 @@
 <section>
   <h1>Your submitted projects</h1>
 
-  <ul id="projects">
+  <ul id="projects" class="mt-6">
     <%= for project <- @projects do %>
-      <li id="project-<%= project.id %>">
-        <h2><%= project.name %></h2>
-        <span><%= project.data["language"]["name"] %></span>
-        <p><%= {:safe, Earmark.as_html!(project.data["description"])} %></p>
+      <li id="project-<%= project.id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-300">
+        <div class="flex flex-row justify-between w-full">
+          <div class="flex flex-col flex-1 items-start p-6 bg-white">
+            <div class="flex flex-row flex-wrap justify-between items-top w-full">
+              <h2 class="mt-0 mr-4">
+                <%= project.name %>
+              </h2>
+              <span class="text-white rounded px-4 py-1 text-center"
+                    style="background-color: <%= project.data["language"]["color"] %>;">
+                  <%= project.data["language"]["name"] %>
+              </span>
+            </div>
 
-        <%= if @edit_id == to_string(project.id) do %>
-          <form phx-submit="update">
-            <input type="hidden" name="id" value="<%= project.id %>" phx-value_id="<%= project.id %>">
+            <div class="text-gray-600 mt-6">
+              <%= {:safe, Earmark.as_html!(project.data["description"])} %>
+            </div>
+          </div>
 
-            <label>
-              What/who are you looking for?
-              <textarea name="description"><%= project.description %></textarea>
-            </label>
+          <div class="flex flex-col justify-center flex-1 px-6 pt-6 pb-4 bg-gray-200">
+            <%= if @edit_id == to_string(project.id) do %>
+              <form phx-submit="update" class="flex flex-col w-full">
+                <input type="hidden" name="id" value="<%= project.id %>" phx-value_id="<%= project.id %>">
 
-            <%= submit "Save" %>
-          </form>
-          <button phx-click="cancel_edit">Cancel</button>
-        <% else %>
-          <p><%= {:safe, Earmark.as_html!(project.description)} %></p>
+                <label class="text-gray-700">
+                  I’m looking for…
+                </label>
+                <textarea name="description" class="bg-white text-gray-700  w-full h64 p-4 my-4 rounded"><%= project.description %></textarea>
 
-          <%= submit "edit", phx_click: "edit", phx_value_id: project.id %>
-          <%= submit "remove", phx_click: "remove", phx_value_id: project.id %>
-        <% end %>
+                <div class="flex justify-end">
+                  <%= submit "Save", id: "btn-save-#{project.id}", class: "mr-2" %>
+
+                  <%= reset "Cancel", id: "btn-cancel-#{project.id}", phx_click: "cancel_edit", phx_target: "#project-#{project.id}"%>
+                </div>
+              </form>
+            <% else %>
+              <p class="text-gray-700">
+                <b>I’m looking for…</b>
+              </p>
+              <div class="text-gray-700">
+                <%= {:safe, Earmark.as_html!(project.description)} %>
+              </div>
+
+              <div class="flex justify-end">
+                <%= submit "edit", id: "btn-edit-#{project.id}", phx_click: "edit", phx_value_id: project.id, class: "mr-2" %>
+                <%= submit "remove", id: "btn-remove-#{project.id}", phx_click: "remove", phx_value_id: project.id %>
+              </div>
+            <% end %>
+          </div>
+        </div>
       </li>
     <% end %>
   </ul>
