--- a/lib/adoptoposs_web/templates/page/index.html.leex
+++ b/lib/adoptoposs_web/templates/page/index.html.leex
@@ -14,7 +14,7 @@
 <section class="mt-16">
   <div class="grid grid-flow-row grid-cols-2 gap-4">
     <%= for project <- @projects do %>
-      <%= render AdoptopossWeb.ProjectView, "project.html", project: project %>
+      <%= render AdoptopossWeb.ProjectView, "project.html", socket: @socket, project: project %>
     <% end %>
   </div>
 </section>
