--- a/lib/adoptoposs_web/templates/search/index.html.leex
+++ b/lib/adoptoposs_web/templates/search/index.html.leex
@@ -36,7 +36,10 @@
        phx-hook="InfiniteScroll"
        data-page="<%= @page %>">
       <%= for project <- @projects do %>
-        <%= render AdoptopossWeb.ProjectView, "project.html", project: project %>
+        <%= live_component @socket, AdoptopossWeb.ProjectComponent,
+          id: "project-#{project.id}",
+          project: project,
+          user_id: @user_id %>
       <% end %>
     </div>
   <% end %>
