--- a/lib/adoptoposs_web/templates/shared/form.html.leex
+++ b/lib/adoptoposs_web/templates/shared/form.html.leex
@@ -2,12 +2,12 @@
   <input type="hidden" name="id" value="<%= @id %>" phx-value_id="<%= @id %>">
 
   <label class="text-gray-700">
-    I’m looking for…
+    <%= @headline %>
   </label>
-  <textarea name="description" class="bg-white text-gray-700  w-full h64 p-4 my-4 rounded"><%= @description %></textarea>
+  <textarea name="message" class="bg-white text-gray-700  w-full h64 p-4 my-4 rounded"><%= @message %></textarea>
 
   <div class="flex justify-end">
-    <%= submit "Save", id: "btn-save-#{@id}", class: "mr-2" %>
+    <%= submit @submit_text, id: "btn-save-#{@id}", class: "mr-2" %>
 
     <%= reset "Cancel", id: "btn-cancel-#{@id}", phx_click: @cancel_event, phx_target: @phx_target %>
   </div>
