--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -23,9 +23,11 @@
 
           <div class="flex flex-col justify-between flex-1 px-6 pt-6 pb-4 bg-gray-200">
             <%= if @edit_id == to_string(project.id) do %>
-              <%= render AdoptopossWeb.ProjectView, "form.html",
+              <%= render AdoptopossWeb.SharedView, "form.html",
                 id: project.id,
-                description: project.description,
+                headline: "I’m looking for…",
+                message: project.description,
+                submit_text: "Save",
                 submit_event: "update",
                 cancel_event: "cancel_edit",
                 phx_target: "#project-#{project.id}" %>
