--- a/lib/adoptoposs_web/templates/page/index.html.leex
+++ b/lib/adoptoposs_web/templates/page/index.html.leex
@@ -12,7 +12,7 @@
 </div>
 
 <section class="mt-16">
-  <div class="grid grid-flow-row grid-cols-2 gap-4">
+  <div class="grid grid-flow-row gap-4">
     <%= for project <- @projects do %>
       <%= live_component @socket, AdoptopossWeb.ProjectComponent,
           id: "project-#{project.id}",
