--- a/lib/adoptoposs_web/templates/search/index.html.leex
+++ b/lib/adoptoposs_web/templates/search/index.html.leex
@@ -31,7 +31,7 @@
     </div>
   <% else %>
     <div id="projects"
-       class="grid grid-flow-row grid-cols-2 gap-4"
+       class="grid grid-flow-row gap-4"
        phx-update="<%= @update %>"
        phx-hook="InfiniteScroll"
        data-page="<%= @page %>">
