--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -106,7 +106,7 @@ label {
   @apply cursor-default py-2 px-0;
 }
 
-.project {
+.list-item {
   .icon-button {
     &:not(.disabled) {
       @apply text-gray-200 bg-gray-600;
