--- a/lib/adoptoposs_web/templates/project/index.html.leex
+++ b/lib/adoptoposs_web/templates/project/index.html.leex
@@ -6,7 +6,7 @@
       <li id="project-<%= project.id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-300">
         <div class="flex flex-row justify-between w-full">
           <div class="flex flex-col flex-1 items-start p-6 bg-white">
-            <div class="flex flex-row flex-wrap justify-between items-top w-full">
+            <div class="flex flex-row flex-wrap justify-between items-start w-full">
               <h2 class="mt-0 mr-4">
                 <%= project.name %>
               </h2>
@@ -16,7 +16,7 @@
               </span>
             </div>
 
-            <div class="text-gray-600 mt-6">
+            <div class="text-gray-600 mt-2">
               <%= {:safe, Earmark.as_html!(project.data["description"])} %>
             </div>
           </div>
@@ -40,9 +40,38 @@
                 <%= {:safe, Earmark.as_html!(project.description)} %>
               </div>
 
-              <div class="flex justify-end">
-                <%= submit "edit", id: "btn-edit-#{project.id}", phx_click: "edit", phx_value_id: project.id, class: "mr-2" %>
-                <%= submit "remove", id: "btn-remove-#{project.id}", phx_click: "remove", phx_value_id: project.id %>
+              <div class="flex justify-between items-end">
+                <div class="mt-2 mb-4">
+                  <%= if Enum.count(project.interests) == 0 do %>
+                    <div class="flex flex-row items-center text-gray-500" title="No messages yet">
+                      <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-6 w-6">
+                          <path d="M18 2a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h16zm-4.37 9.1L20 16v-2l-5.12-3.9L20 6V4l-10 8L0 4v2l5.12 4.1L0 14v2l6.37-4.9L10 14l3.63-2.9z"/>
+                        </svg>
+                      </span>
+                      <span class="ml-2 text-md font-medium">
+                        <%= Enum.count(project.interests) %>
+                      </span>
+                    </div>
+                  <% else %>
+                    <%= live_redirect to: Routes.live_path(@socket, AdoptopossWeb.ProjectLive.Show, project.id), class: "flex flex-row items-center text-gray-600", title: "#{Enum.count(project.interests)} people contacted you" do %>
+                      <span>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-6 w-6">
+                          <path d="M18 2a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4c0-1.1.9-2 2-2h16zm-4.37 9.1L20 16v-2l-5.12-3.9L20 6V4l-10 8L0 4v2l5.12 4.1L0 14v2l6.37-4.9L10 14l3.63-2.9z"/>
+                        </svg>
+                      </span>
+
+                      <span class="ml-2 text-md font-medium">
+                        <%= Enum.count(project.interests) %>
+                      </span>
+                    <% end %>
+                  <% end %>
+                </div>
+
+                <div class="flex justify-end">
+                  <%= submit "edit", id: "btn-edit-#{project.id}", phx_click: "edit", phx_value_id: project.id, class: "mr-2" %>
+                  <%= submit "remove", id: "btn-remove-#{project.id}", phx_click: "remove", phx_value_id: project.id %>
+                </div>
               </div>
             <% end %>
           </div>
