--- a/lib/adoptoposs_web/templates/project/project.html.leex
+++ b/lib/adoptoposs_web/templates/project/project.html.leex
@@ -1,7 +1,7 @@
-<div id="<%= @id %>" class="project flex flex-wrap w-full shadow hover:shadow-md border border-gray-300">
+<div id="<%= @id %>" class="list-item flex flex-wrap w-full shadow hover:shadow-md border border-gray-300">
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 bg-white overflow-auto">
-      <div class="flex flex-row justify-between items-top w-full">
+      <div class="flex flex-row justify-between items-start w-full">
         <h2 class="mt-0 mr-4 overflow-y-hidden truncate">
           <a href="<%= @project.data["url"] %>" title="<%= @project.data["url"] %>" class="text-pink-900">
             <%= String.trim(@project.name) %>
@@ -13,7 +13,7 @@
         </span>
       </div>
 
-      <div class="text-gray-600 mt-6">
+      <div class="text-gray-600 mt-2">
         <%= {:safe, Earmark.as_html!(String.trim(@project.data["description"]))} %>
       </div>
     </div>
