--- a/lib/adoptoposs_web/templates/repo/repo.html.leex
+++ b/lib/adoptoposs_web/templates/repo/repo.html.leex
@@ -1,7 +1,7 @@
 <div id="<%= @id %>" class="flex flex-wrap w-full shadow hover:shadow-md mb-4 border border-gray-300">
   <div class="flex flex-row justify-between w-full">
     <div class="flex flex-col flex-1 items-start p-6 bg-white">
-      <div class="flex flex-row flex-wrap justify-between items-top w-full">
+      <div class="flex flex-row flex-wrap justify-between items-start w-full">
         <h2 class="mt-0 mr-4">
           <%= @repo.name %>
         </h2>
@@ -11,7 +11,7 @@
         </span>
       </div>
 
-      <div class="text-gray-600 mt-6">
+      <div class="text-gray-600 mt-2">
         <%= {:safe, Earmark.as_html!(@repo.description)} %>
       </div>
     </div>
