--- a/lib/adoptoposs_web/templates/settings/index.html.leex
+++ b/lib/adoptoposs_web/templates/settings/index.html.leex
@@ -1,3 +1,85 @@
 <section>
   <h1>Settings</h1>
+
+  <div class="flex flex-row">
+    <div class="flex flex-col flex-wrap flex-1">
+      <h2>Languages you follow</h2>
+
+      <div class="flex flex-row flex-wrap mt-6">
+        <%= for tag_subscription <- @tag_subscriptions do %>
+          <% tag = tag_subscription.tag %>
+          <div class="flex flex-row items-center bg-white bg-white text-red-500 border border-red-500 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white">
+            <div class="w-4 h-4 rounded rounded-full ml-3" style="background-color: <%= tag.color %>;"></div>
+            <div class="pl-3" title="<%= tag.name %>">
+              <span class=""><%= tag.name %></span>
+
+              <form phx-submit="unfollow_tag"
+                title="Unfollow <%= tag.name %>"
+                class="inline-block cursor-pointer">
+                <input type="hidden" name="tag_subscription_id" value="<%= tag_subscription.id %>" phx-value_tag_subscription_id="<%= tag_subscription.id %>">
+                <%= submit class: "plain p-2 pr-4" do %>&times;<% end %>
+              </form>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="flex flex-col flex-wrap flex-1">
+      <h2>Add a language</h2>
+
+      <form class="flex flex-wrap mt-6" phx-submit="search_tags" phx-change="search_tags">
+        <input type="search"
+          class="flex-grow border border-red-500 rounded-full h-16 px-8 mr-4 text-red-600"
+          id="search"
+          name="q"
+          value="<%= @query %>"
+          autocomplete="off"
+          autofocus
+          placeholder="Search for programming languages..."
+          phx-debounce="500" />
+      </form>
+
+      <div class="flex flex-row flex-wrap mt-6" phx-update="<%= @update %>">
+        <%= if @query && @page == 1 && Enum.empty?(@tag_results) do %>
+          <p class="text-pink-900">
+            No language found for "<%= @query %>" :(
+          </p>
+        <% else %>
+          <%= for result <- @tag_results do %>
+            <%= if result in Enum.map(@tag_subscriptions, &(&1.tag)) do %>
+              <div class="flex flex-row flex-wrap items-center bg-gray-200 text-gray-500 border border-gray-500 font-semibold mr-2 mb-2 rounded cursor-default py-2"  title="<%= result.name %>">
+                <div class="w-4 h-4 rounded rounded-full ml-3 bg-gray-500"></div>
+
+                <div class="pl-3"><%= result.name %></div>
+
+                <div class="inline-block pl-3 pr-4">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="h-3 w-3 fill-current">
+                    <path d="M0 11l2-2 5 5L18 3l2 2L7 18z"/>
+                  </svg>
+                </div>
+              </div>
+            <% else %>
+              <div class="flex flex-row items-center bg-white bg-white text-red-500 border border-red-500 font-semibold mr-2 mb-2 rounded hover:bg-red-500 hover:text-white hover:border-white cursor-pointer"
+                title="Follow <%= result.name %>">
+                <form phx-submit="follow_tag"
+                  title="Follow <%= result.name %>"
+                  class="flex flex-row flex-wrap items-center cursor-pointer">
+                  <input type="hidden" name="tag_id" value="<%= result.id %>" phx-value_tag_id="<%= result.id %>">
+
+                  <%= submit class: "plain flex flex-row items-center font-semibold text-md py-2 pl-0 pr-3" do %>
+                    <div class="w-4 h-4 rounded rounded-full ml-3" style="background-color: <%= result.color %>;">
+                    </div>
+
+                    <div class="ml-3"><%= result.name %></div>
+                    <div class="w-3 ml-3 mr-1">+</div>
+                  <% end %>
+                </form>
+              </div>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
+  </div>
 </section>
